tests/NormalTests/paczka1/fuzzy1/41924740.err
Error in line 2: 0CBOnJz99T0 A578 47,6
Error in line 15: asS6fpq6 A587 40,7
Error in line 22: nQOXpqF A578 34,2
Error in line 36: asS6fpq6 S960 15,4
